packages/core/src/lib/middleware/tests/app/modules/error/controllers/site/errorHandlerTest/errorInSyncWithNext.js
const jest = require('jest-mock');
module.exports = jest.fn((request, response, stack, next) => {
  next(new Error('Error in sync with next'));
})
